--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>react-crossword v0.0.1</title>
+    <title>@jaredreisinger/react-crossword v1.0.0</title>
   </head>
   <body>
     <div id="rsg-root"></div>
-    <script src="build/bundle.d28ac280.js"></script>
+    <script src="build/bundle.4677e53d.js"></script>
   </body>
 </html>
