--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="rsg-root"></div>
-    <script src="build/bundle.7e564c53.js"></script>
+    <script src="build/bundle.8a94e8ff.js"></script>
   </body>
 </html>
